--- a/UsluzniObrt.MVC/Views/Order/Menu.cshtml
+++ b/UsluzniObrt.MVC/Views/Order/Menu.cshtml
@@ -30,7 +30,7 @@
                                                 <td class="text-center">@item.Description</td>
 
                                                 <td class="text-sm-center">
-                                                @Html.ActionLink("Add to order", "Cart", new { id = item.Id}, new { @class = "btn btn-primary" })
+                                                @Html.ActionLink("Add to order", "Cart", new { id = item.Id}, new { @class = "btn btn-success" })
                                                 </td>
                                             </tr>
                                         }
