--- a/UsluzniObrt.MVC/Views/Admin/CreateCategory.cshtml
+++ b/UsluzniObrt.MVC/Views/Admin/CreateCategory.cshtml
@@ -3,7 +3,7 @@
 
 
 <body>
-    @using (Html.BeginForm("Create", "Admin", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
+    @using (Html.BeginForm("CreateCategory", "Admin", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
     {
         @Html.AntiForgeryToken()
         @Html.ValidationSummary("", new { @class = "text-danger" })
