--- a/UsluzniObrt.MVC/Views/Admin/Edit.cshtml
+++ b/UsluzniObrt.MVC/Views/Admin/Edit.cshtml
@@ -20,7 +20,7 @@
         </div>
     </div>
     <div class="form-group">
-        @Html.LabelFor(m => m.CategoryId, new { @class = "control-label" })
+        @Html.LabelFor(m => m.CategoryId, new { @class = "col-md-9 control-label" })
         <div class="col-md-9">
             @Html.DropDownListFor(x => x.CategoryId, new SelectList(ViewBag.CategoryList, "Id", "Name"))
             @Html.ValidationMessageFor(m => m.CategoryId)
