--- a/UsluzniObrt.MVC/Views/Admin/Menu.cshtml
+++ b/UsluzniObrt.MVC/Views/Admin/Menu.cshtml
@@ -1,30 +1,25 @@
 ﻿@model UsluzniObrt.MVC.ViewModels.ItemsViewModel
 @{
-    ViewBag.Title = "StoreMenu";
+    ViewBag.Title = "";
 }
-<h2 class="text-center">Create Item/Category</h2>
+<h2 class="text-center">View and edit menu</h2>
 <body>
     <div class="container-fluid">
         <div class="row">
 
-            <div class="col-6">
-
-                @Html.ActionLink("New Item", "CreateItem", null, new { @class = "btn btn-primary" })
-
-
+            <div class="col-6 pb-3">
+                @Html.ActionLink("New Item", "CreateItem", null, new { @class = "btn btn-success" })
+                @Html.ActionLink("New Category", "CreateCategory", null, new { @class = "btn btn-success" })
 
             </div>
-
-
-
         </div>
     </div>
         @foreach (var item in Model.Items)
         {
             <div class="row justify-content-center">
                 <div class="col">
-                    <div class="card card-body">
-                        <table class="table table-bordered">
+                    <div class="card card-body mb-2">
+                        <table class="table-bordered">
                             <tbody>
                                 <tr>
                                     <td class="text-center text-capitalize">@item.Name</td>
@@ -34,7 +29,7 @@
                                     <td class="text-center text-capitalize">@item.Status</td>
                                     <td class="text-center text-capitalize">
                                         @Html.ActionLink("Edit", "Edit", new { id = item.Id }, new { @class = "btn btn-primary" })
-                                        @Html.ActionLink("Delete", "DeleteItem", new { id = item.Id }, new { @class = "btn btn-primary" })
+                                        @Html.ActionLink("Delete", "DeleteItem", new { id = item.Id }, new { @class = "btn btn-danger" })
                                     </td>
                                 </tr>
                             </tbody>
@@ -43,9 +38,4 @@
                 </div>
             </div>
         }
-
-
-
-
-
 </body>
