Kompletiran završni rad
Završni rad je gotov

--- a/UsluzniObrt.MVC/Views/Admin/CreateCategory.cshtml
+++ b/UsluzniObrt.MVC/Views/Admin/CreateCategory.cshtml
@@ -5,6 +5,7 @@
 <body>
     @using (Html.BeginForm("CreateCategory", "Admin", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
     {
+    <h4 class="mt-2 ml-3">Create Category</h4>
         @Html.AntiForgeryToken()
         @Html.ValidationSummary("", new { @class = "text-danger" })
 
